# FFmpeg

./: ReadMe.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wtz/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wtz/ffmpeg/: AudioEditorActivity.java  AudioPlayActivity.java  BaseTestActivity.java  MainActivity.java  OpenGLTestActivity.java  VideoPlayActivity.java
app/src/main/java/com/wtz/ffmpeg/gl_test/: ShaderUtil.java  TextureGLSurfaceView.java  TriangleGLSurfaceView.java
app/src/main/java/com/wtz/ffmpeg/utils/: DateTimeUtil.java  FileChooser.java  PermissionChecker.java  PermissionHandler.java  ScreenUtils.java  UriUtil.java
app/src/main/java/com/wtz/ffmpeg/view/: ProgressRound.java
app/src/main/res/layout/: activity_audio_editor.xml  activity_audio_play.xml  activity_base_test.xml  activity_main.xml  activity_opengl_test.xml  activity_video_play.xml
app/src/main/res/raw/: triangle_fragment_shader.glsl  triangle_vertex_shader.glsl
app/src/main/res/values/: attrs.xml.xml  strings.xml  styles.xml
app/src/test/java/com/wtz/ffmpeg/: ExampleUnitTest.java
ffmpegapi/: build.gradle
ffmpegapi/native_libs_build_sh/: build_ffmpeg.sh  build_openssl.sh
ffmpegapi/src/androidTest/java/com/wtz/ffmpegapi/: ExampleInstrumentedTest.java
ffmpegapi/src/main/: AndroidManifest.xml
ffmpegapi/src/main/cpp/: AVPacketQueue.cpp  AudioStream.cpp  CMakeLists.txt  FFmpegAPI.cpp  JavaListener.cpp  LooperThread.cpp  OpenSLPlayer.cpp  PlayStatus.cpp  ThreadDemo.cpp  WeAudio.cpp  WeFFmpeg.cpp  WePlayerJNI.cpp  WeUtils.cpp  ffmpeg_api.cpp  thread_demo.cpp
ffmpegapi/src/main/cpp/include/: AVPacketQueue.h  AndroidLog.h  AudioStream.h  JavaListener.h  JavaListenerContainer.h  OnResultListener.h  OpenSLPlayer.h  PlayStatus.h  WeAudio.h  WeError.h  WeFFmpeg.h  WeUtils.h
ffmpegapi/src/main/cpp/soundtouch/: TDStretch.cpp
ffmpegapi/src/main/cpp/soundtouch/include/: STTypes.h
ffmpegapi/src/main/cpp/test/: CppTest.cpp  ThreadDemo.cpp
ffmpegapi/src/main/cpp/weplayer/: AVPacketQueue.cpp  AudioStream.cpp  EditStatus.cpp  LooperThread.cpp  OpenSLPlayer.cpp  PlayStatus.cpp  VideoStream.cpp  WeAudio.cpp  WeAudioDecoder.cpp  WeAudioEditor.cpp  WeAudioPlayer.cpp  WeDemux.cpp  WeEditor.cpp  WeFFmpeg.cpp  WeJNI.cpp  WePlayer.cpp  WePlayerJNI.cpp  WeVideoDecoder.cpp  WeVideoPlayer.cpp
ffmpegapi/src/main/cpp/weplayer/include/: AVPacketQueue.h  AudioStream.h  EditStatus.h  JavaListenerContainer.h  LooperThread.h  OnCheckVideoHardCodec.h  OnCompletionListener.h  OnErrorListener.h  OnInitVideoHardCodec.h  OnNativeLoading.h  OnPlayLoadingListener.h  OnPreparedListener.h  OnSeekComplete.h  OnSetVideoHardCodec.h  OnStopVideoHardCodec.h  OnVideoPacketCall.h  OnYUVDataCall.h  OpenSLPlayer.h  PcmGenerator.h  PlayStatus.h  VideoStream.h  WeAudio.h  WeAudioDecoder.h  WeAudioEditor.h  WeAudioPlayer.h  WeDemux.h  WeEditor.h  WeError.h  WeFFmpeg.h  WePlayer.h  WeVideoDecoder.h  WeVideoPlayer.h
ffmpegapi/src/main/java/com/wtz/ffmpegapi/: AACEncoder.java  API.java  CppTest.java  CppThreadDemo.java  MP3Encoder.java  PCMRecorder.java  WAVSaver.java  WeEditor.java  WePlayer.java  WeSurfaceView.java  WeVideoView.java
ffmpegapi/src/main/java/com/wtz/ffmpegapi/opengl/: ShaderUtil.java  WeSurfaceView.java
ffmpegapi/src/main/java/com/wtz/ffmpegapi/utils/: LogUtils.java  ShaderUtil.java  TextureUtils.java  VideoUtils.java
ffmpegapi/src/main/res/raw/: mediacodec_fragment_shader.glsl  yuv_fragment_shader.glsl
ffmpegapi/src/main/res/values/: strings.xml
ffmpegapi/src/test/java/com/wtz/ffmpegapi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libmp3util/: build.gradle
liveplay/: build.gradle  proguard-rules.pro
liveplay/src/main/: AndroidManifest.xml
liveplay/src/main/java/com/wtz/liveplay/: AudioPlayer.java  AudioService.java  MainActivity.java  RadioFragment.java  TVFragment.java  VideoPlayer.java
liveplay/src/main/java/com/wtz/liveplay/adapter/: BaseRecyclerViewAdapter.java  MyFragmentPagerAdapter.java  RadioChannelsGridAdapter.java  RadioPlacesGridAdapter.java  TVChannelsGridAdapter.java
liveplay/src/main/java/com/wtz/liveplay/net/: HttpMethod.java  RadioAPI.java  RadioService.java  SSLUtil.java
liveplay/src/main/java/com/wtz/liveplay/net/Listener/: BaseObserver.java  ResultListener.java
liveplay/src/main/java/com/wtz/liveplay/net/converter/: MyGsonConverterFactory.java  MyStringConverterFactory.java
liveplay/src/main/java/com/wtz/liveplay/net/data/: BaseData.java  RadioChannels.java  RadioPlaces.java  RadioToken.java
liveplay/src/main/java/com/wtz/liveplay/net/error/: ApiErrorCode.java  ApiException.java
liveplay/src/main/java/com/wtz/liveplay/utils/: DateTimeUtil.java  ScreenUtils.java
liveplay/src/main/java/com/wtz/liveplay/view/: BatteryView.java  GridItemDecoration.java  LoadingDialog.java  TabItemView.java
liveplay/src/main/res/drawable/: button_error_bg_shape.xml  circle_progress_bar_anim.xml  dialog_error_bg_shape.xml  ic_radio_selector.xml  ic_tv_selector.xml  next_image_selector.xml  pause_image_selector.xml  play_image_selector.xml  pre_image_selector.xml
liveplay/src/main/res/layout/: activity_audio_player_landscape.xml  activity_audio_player_portrait.xml  activity_main.xml  activity_video_player.xml  dialog_error.xml  fragment_radio_landscape.xml  fragment_radio_portrait.xml  fragment_tv.xml  item_radio_channels.xml  item_radio_places.xml  item_tv_channels.xml  notify_audio_player.xml
liveplay/src/main/res/values/: attrs.xml  strings.xml  styles.xml
